@@ -1,3 +1,9 @@
+2007-08-03  James E. Wilson  <wilson@specifix.com>
+
+	* ia64-gen.c: (main): Add missing newline to copyright message.
+	* ia64-ic.tbl (fp-non-arith): Add xmpy.
+	* ia64-asmtab.c: Regenerate.
+	
 2007-08-01  Michael Snyder  <msnyder@access-company.com>
 
 	* i386-dis.c (print_insn): Guard against NULL.
